--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -12,5 +12,12 @@
     "summary": "Web-based platform concept for discovering startup-related insights and resources.",
     "details": "Web-based platform concept for discovering startup-related insights and resources.\n\nHelps users explore ideas, opportunities, and entrepreneurial information in one space.\n\nBuilt with emphasis on intuitive navigation and organized content presentation.\n\nEncourages knowledge sharing within the startup ecosystem through accessible UI layouts.\n\nDesigned to simplify engagement for individuals interested in startups and innovation.",
     "link": "#"
+  },
+  {
+    "id": "proj-3",
+    "title": "ResoNet",
+    "summary": "ESP32-based IoT sensors, GIS mapping (Leaflet), RFID/QR access control.",
+    "details": "Developed ResoNet, an IoT and GIS-enabled platform to provide MSMEs real-time access, booking, and monitoring of shared industrial infrastructure.\n\nIntegrated low-cost IoT sensors with RFID/QR-based access control and live GIS mapping to improve transparency and resource utilization.\n\nDesigned analytics dashboards to track usage trends, optimize facility management, and reduce production delays for MSMEs.",
+    "link": "#"
   }
 ]
